[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = "Fullstack Web Development with Python - Homework 8"
authors = ["Mykola Podopryhora <m.podopryhora@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"